fix bash prompt for pyenv

--- a/roles/bash/templates/bashrc.j2
+++ b/roles/bash/templates/bashrc.j2
@@ -11,6 +11,11 @@ PROMPT_COMMAND=my_prompt
 my_prompt() {
     local exit_code="$?"
     PS1="(${exit_code}) \u@\H:\w \$ "
+
+    if [ ! -z $VIRTUAL_ENV ]; then
+        venv=$(basename $VIRTUAL_ENV)
+        PS1="($venv) $PS1"
+    fi
 }
 
 # use vi line editing mode
