--- a/roles/bash/templates/bashrc.j2
+++ b/roles/bash/templates/bashrc.j2
@@ -24,6 +24,7 @@ bind -m vi-insert "\C-l":clear-screen
 
 # history options
 shopt -s histappend
+shopt -s histverify
 
 export HISTTIMEFORMAT="%h %d %H:%M:%S "
 export HISTSIZE=10000
