update garbage collection in gitconfig

--- a/roles/gitconfig/templates/gitconfig.j2
+++ b/roles/gitconfig/templates/gitconfig.j2
@@ -4,6 +4,9 @@
 
 [branch]
     autosetuprebase = always
+
+[gc]
+    autoDetach = false
 {% for c in gitconfig.credentials %}
 
 [credential "{{ c.name }}"]
