--- a/roles/bash/templates/bashrc.j2
+++ b/roles/bash/templates/bashrc.j2
@@ -31,6 +31,8 @@ export HISTSIZE=10000
 export HISTFILESIZE=10000
 export HISTCONTROL="ignorespace:erasedups"
 
+export SUDO_EDITOR=vim
+
 export PAGER='less -X'
 export LIBVIRT_DEFAULT_URI='qemu:///system'
 
