--- a/roles/bash/templates/bash.profile.j2
+++ b/roles/bash/templates/bash.profile.j2
@@ -5,8 +5,15 @@ if [ -f ~/.bashrc ]; then
     . ~/.bashrc
 fi
 
-# User specific environment and startup programs
-export PATH=$HOME/.local/bin:$PATH
+# set PATH so it includes user's private bin if it exists
+if [ -d "$HOME/bin" ] ; then
+    PATH="$HOME/bin:$PATH"
+fi
+
+# set PATH so it includes user's private bin if it exists
+if [ -d "$HOME/.local/bin" ] ; then
+    PATH="$HOME/.local/bin:$PATH"
+fi
 {% if use_keychain %}
 
 # setup keychain
