--- a/roles/gitconfig/templates/gitconfig.j2
+++ b/roles/gitconfig/templates/gitconfig.j2
@@ -7,12 +7,14 @@
 
 [gc]
     autoDetach = false
+{% if gitconfig.credentials is defined %}
 {% for c in gitconfig.credentials %}
 
 [credential "{{ c.name }}"]
     username = {{ c.username }}
     helper = {{ c.helper }}
 {% endfor %}
+{% endif %}
 {% if use_vscode_git %}
 
 [core]
