--- a/roles/ssh/templates/ssh_config.j2
+++ b/roles/ssh/templates/ssh_config.j2
@@ -1,12 +1,12 @@
 {% for host in ssh_host_configs | dictsort %}
 Host {{ host[0] }}
-{% for name, value in host[1].iteritems() %}
+{% for name, value in host[1].items() %}
     {{ name }} {{ value }}
 {% endfor %}
 {% endfor %}
 {% if ssh_host_common_configs is defined %}
 Host *
-{% for name, value in ssh_host_common_configs.iteritems() %}
+{% for name, value in ssh_host_common_configs.items() %}
     {{ name }} {{ value }}
 {% endfor %}
 {% endif %}
