--- a/roles/bash/templates/bashrc.j2
+++ b/roles/bash/templates/bashrc.j2
@@ -10,7 +10,7 @@ PROMPT_COMMAND=my_prompt
 
 my_prompt() {
     local exit_code="$?"
-    PS1="(${exit_code}) \u@\H:\w \$ "
+    PS1="(${exit_code}) \[\033[01;32m\]\u@\H\[\033[00m\]:\[\033[01;34m\]\w\[\033[00m\] \$ "
 
     if [ ! -z $VIRTUAL_ENV ]; then
         venv=$(basename $VIRTUAL_ENV)
