change SUDO_EDITOR to EDITOR

--- a/roles/bash/templates/bashrc.j2
+++ b/roles/bash/templates/bashrc.j2
@@ -31,7 +31,7 @@ export HISTSIZE=10000
 export HISTFILESIZE=10000
 export HISTCONTROL="ignorespace:erasedups"
 
-export SUDO_EDITOR=vim
+export EDITOR=vim
 
 export PAGER='less -X'
 export LIBVIRT_DEFAULT_URI='qemu:///system'
