allow list in ssh_configs

--- a/roles/ssh/templates/ssh_config.j2
+++ b/roles/ssh/templates/ssh_config.j2
@@ -1,12 +1,19 @@
 {% for host in ssh_host_configs | dictsort %}
 Host {{ host[0] }}
-{% for name, value in host[1].items() %}
+    {% for name, value in host[1].items() %}
+        {% if value is string %}
     {{ name }} {{ value }}
+        {% else %}
+            {% for v in value %}
+    {{ name }} {{ v }}
+            {% endfor %}
+        {% endif %}
+    {% endfor %}
 {% endfor %}
-{% endfor %}
+
 {% if ssh_host_common_configs is defined %}
 Host *
-{% for name, value in ssh_host_common_configs.items() %}
+    {% for name, value in ssh_host_common_configs.items() %}
     {{ name }} {{ value }}
-{% endfor %}
+    {% endfor %}
 {% endif %}
