--- a/roles/bash/templates/bashrc.j2
+++ b/roles/bash/templates/bashrc.j2
@@ -10,7 +10,19 @@ PROMPT_COMMAND=my_prompt
 
 my_prompt() {
     local exit_code="$?"
-    PS1="(${exit_code}) \[\033[01;34m\]\u\[\033[00m\]@\[\033[01;32m\]\H\[\033[00m\]:\[\033[01;34m\]\w\[\033[00m\] \$ "
+
+    RESET="\[\033[0m\]"
+    RED="\[\033[0;31m\]"
+    GREEN="\[\033[01;32m\]"
+    BLUE="\[\033[01;34m\]"
+
+    if [ $exit_code -ne 0 ]; then
+        PS1="(${RED}"
+    else
+        PS1="(${GREEN}"
+    fi
+
+    PS1="${PS1}${exit_code}${RESET}) ${BLUE}\u${RESET}@${GREEN}\H${RESET} [${BLUE}\w${RESET}]\n\$ "
 
     if [ ! -z $VIRTUAL_ENV ]; then
         venv=$(basename $VIRTUAL_ENV)
