--- a/roles/bash/templates/bashrc.j2
+++ b/roles/bash/templates/bashrc.j2
@@ -8,6 +8,10 @@ fi
 # User specific aliases and functions
 PROMPT_COMMAND=my_prompt
 
+git_branch() {
+    return $(git branch 2> /dev/null | sed -e '/^[^*]/d' -e 's/* \(.*\)/\1/')
+}
+
 my_prompt() {
     local exit_code="$?"
 
@@ -15,6 +19,10 @@ my_prompt() {
     RED="\[\033[0;31m\]"
     GREEN="\[\033[01;32m\]"
     BLUE="\[\033[01;34m\]"
+    YELLOW="\[\033[01;33m\]"
+    CYAN="\[\033[00;36m\]"
+
+    GIT_BRANCH=git_branch()
 
     if [ $exit_code -ne 0 ]; then
         PS1="(${RED}"
@@ -22,7 +30,13 @@ my_prompt() {
         PS1="(${GREEN}"
     fi
 
-    PS1="${PS1}${exit_code}${RESET}) ${GREEN}\H${RESET} [${BLUE}\w${RESET}]\n\$ "
+    PS1="${PS1}${exit_code}${RESET}) ${YELLOW}\H${RESET} [${BLUE}\w${RESET}]"
+
+    if [ ! -z $GIT_BRANCH ]; then
+        PS1="${PS1} (${CYAN}${GIT_BRANCH}${RESET})"
+    fi
+
+    PS1="${PS1}\n\$ "
 
     if [ ! -z $VIRTUAL_ENV ]; then
         venv=$(basename $VIRTUAL_ENV)
