--- a/roles/bash/templates/bash.profile.j2
+++ b/roles/bash/templates/bash.profile.j2
@@ -20,4 +20,9 @@ fi
 eval `{{ keychain_bin }} --eval --agents ssh id_rsa`
 {% endif %}
 
-export TERMINAL=termite
+# set TERMINAL to termite if it exists
+which termite > /dev/null 2>&1
+
+if [ $? -eq 0 ]; then
+    export TERMINAL=termite
+fi
