--- a/roles/bash/templates/bash.profile.j2
+++ b/roles/bash/templates/bash.profile.j2
@@ -14,15 +14,7 @@ fi
 if [ -d "$HOME/.local/bin" ] ; then
     PATH="$HOME/.local/bin:$PATH"
 fi
-{% if use_keychain %}
 
-# setup keychain
-eval `{{ keychain_bin }} --eval --agents ssh id_rsa`
-{% endif %}
-
-# set TERMINAL to termite if it exists
-which termite > /dev/null 2>&1
-
-if [ $? -eq 0 ]; then
-    export TERMINAL=termite
-fi
+# setup LANG and LC_ALL
+LC_ALL=en_US.UTF-8
+LANG=en_US.UTF-8
