--- a/roles/bash/templates/bashrc.j2
+++ b/roles/bash/templates/bashrc.j2
@@ -62,6 +62,10 @@ export EDITOR=vim
 export PAGER='less -X'
 export LIBVIRT_DEFAULT_URI='qemu:///system'
 
+# setup LANG and LC_ALL
+export LC_ALL=en_US.UTF-8
+export LANG=en_US.UTF-8
+
 # begin local path augments
 {% if path_local_pre is defined %}
 export PATH="{{ path_local_pre | join(':') }}:$PATH"
