update git config

--- a/roles/gitconfig/templates/gitconfig.j2
+++ b/roles/gitconfig/templates/gitconfig.j2
@@ -7,6 +7,9 @@
 
 [gc]
     autoDetach = false
+
+[alias]
+    oneline = log --oneline
 {% if gitconfig.credentials is defined %}
 {% for c in gitconfig.credentials %}
 
