add node to dev host

--- a/roles/bash/templates/bashrc.j2
+++ b/roles/bash/templates/bashrc.j2
@@ -55,7 +55,7 @@ shopt -s histverify
 export HISTTIMEFORMAT="%h %d %H:%M:%S "
 export HISTSIZE=10000
 export HISTFILESIZE=10000
-export HISTCONTROL="ignorespace:erasedups"
+export HISTCONTROL="ignorespace"
 
 export EDITOR=vim
 
