add safe directories to gitconfig

--- a/roles/gitconfig/templates/gitconfig.j2
+++ b/roles/gitconfig/templates/gitconfig.j2
@@ -12,6 +12,12 @@
 	helper = {{ c.helper }}
 {% endfor %}
 {% endif %}
+{% if gitconfig.safe_directories is defined %}
+[safe]
+{% for sd in gitconfig.safe_directories %}
+	directory = {{ sd }}
+{% endfor %}
+{% endif %}
 {% if use_vscode_git %}
 [core]
 	editor = code --wait
@@ -21,4 +27,7 @@
 	cmd = code --wait --diff $LOCAL $REMOTE
 [commit]
 	template = /dev/null
+{% else %}
+[core]
+	editor = vim
 {% endif %}
