add new git configs for n-wave

--- a/roles/gitconfig/templates/gitconfig.j2
+++ b/roles/gitconfig/templates/gitconfig.j2
@@ -12,12 +12,8 @@
 	helper = {{ c.helper }}
 {% endfor %}
 {% endif %}
-{% if gitconfig.safe_directories is defined %}
 [safe]
-{% for sd in gitconfig.safe_directories %}
-	directory = {{ sd }}
-{% endfor %}
-{% endif %}
+        directory = *
 {% if use_vscode_git %}
 [core]
 	editor = code --wait
