add bash profile customizations

--- a/roles/bash/templates/bashrc.j2
+++ b/roles/bash/templates/bashrc.j2
@@ -110,3 +110,13 @@ alias {{ item[0] }}='{{ item[1] }}'
 source {{ item }}
 {% endfor %}
 # end source imports
+
+# User specific aliases and functions
+if [ -d ~/.bashrc.d ]; then
+    for rc in ~/.bashrc.d/*; do
+        if [ -f "$rc" ]; then
+            . "$rc"
+        fi
+    done
+fi
+unset rc
