add nested tmux keybinding

--- a/roles/tmux/templates/tmux.conf.j2
+++ b/roles/tmux/templates/tmux.conf.j2
@@ -1,3 +1,6 @@
+# add Ctrl-A for nested tmux
+bind-key -n C-a send-prefix
+
 # force reload with prefix-R
 unbind r
 bind r source-file ~/.tmux.conf
